<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".AccountCreation.ResetPassword">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Provide your account's email fro which you want to reset your password!"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="200dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_emailReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pb_resetPassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/reset_password"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/bt_round"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:text="Back to" />

        <TextView
            android:id="@+id/tv_resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/blue"
            android:textSize="18dp" />

    </LinearLayout>



</LinearLayout>